--- a/Assignment/Assignment-3_complete-1.ipynb
+++ b/Assignment/Assignment-3_complete-1.ipynb
@@ -34,23 +34,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Object of type Index is not JSON serializable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-c072b0edc63e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mdcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"columns\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mdcolumns\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\s162668\\appdata\\local\\programs\\python\\python38\\lib\\json\\__init__.py\u001b[0m in \u001b[0;36mdumps\u001b[1;34m(obj, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[0;32m    229\u001b[0m         \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mindent\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mseparators\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m         default is None and not sort_keys and not kw):\n\u001b[1;32m--> 231\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_default_encoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    232\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    233\u001b[0m         \u001b[0mcls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mJSONEncoder\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\s162668\\appdata\\local\\programs\\python\\python38\\lib\\json\\encoder.py\u001b[0m in \u001b[0;36mencode\u001b[1;34m(self, o)\u001b[0m\n\u001b[0;32m    197\u001b[0m         \u001b[1;31m# exceptions aren't as detailed.  The list call should be roughly\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m         \u001b[1;31m# equivalent to the PySequence_Fast that ''.join() would do.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 199\u001b[1;33m         \u001b[0mchunks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_one_shot\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    200\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    201\u001b[0m             \u001b[0mchunks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\s162668\\appdata\\local\\programs\\python\\python38\\lib\\json\\encoder.py\u001b[0m in \u001b[0;36miterencode\u001b[1;34m(self, o, _one_shot)\u001b[0m\n\u001b[0;32m    255\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkey_separator\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem_separator\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_keys\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    256\u001b[0m                 self.skipkeys, _one_shot)\n\u001b[1;32m--> 257\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    258\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    259\u001b[0m def _make_iterencode(markers, _default, _encoder, _indent, _floatstr,\n",
-      "\u001b[1;32mc:\\users\\s162668\\appdata\\local\\programs\\python\\python38\\lib\\json\\encoder.py\u001b[0m in \u001b[0;36mdefault\u001b[1;34m(self, o)\u001b[0m\n\u001b[0;32m    177\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    178\u001b[0m         \"\"\"\n\u001b[1;32m--> 179\u001b[1;33m         raise TypeError(f'Object of type {o.__class__.__name__} '\n\u001b[0m\u001b[0;32m    180\u001b[0m                         f'is not JSON serializable')\n\u001b[0;32m    181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: Object of type Index is not JSON serializable"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>engine_id</th>\n",
+       "      <th>cycle</th>\n",
+       "      <th>RUL</th>\n",
+       "      <th>setting1</th>\n",
+       "      <th>setting2</th>\n",
+       "      <th>setting3</th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s2</th>\n",
+       "      <th>s3</th>\n",
+       "      <th>s4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>s12</th>\n",
+       "      <th>s13</th>\n",
+       "      <th>s14</th>\n",
+       "      <th>s15</th>\n",
+       "      <th>s16</th>\n",
+       "      <th>s17</th>\n",
+       "      <th>s18</th>\n",
+       "      <th>s19</th>\n",
+       "      <th>s20</th>\n",
+       "      <th>s21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>192</td>\n",
+       "      <td>-0.0007</td>\n",
+       "      <td>-0.0004</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>641.82</td>\n",
+       "      <td>1589.70</td>\n",
+       "      <td>1400.60</td>\n",
+       "      <td>...</td>\n",
+       "      <td>521.66</td>\n",
+       "      <td>2388.02</td>\n",
+       "      <td>8138.62</td>\n",
+       "      <td>8.4195</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.06</td>\n",
+       "      <td>23.4190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>191</td>\n",
+       "      <td>0.0019</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>642.15</td>\n",
+       "      <td>1591.82</td>\n",
+       "      <td>1403.14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.28</td>\n",
+       "      <td>2388.07</td>\n",
+       "      <td>8131.49</td>\n",
+       "      <td>8.4318</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>23.4236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>190</td>\n",
+       "      <td>-0.0043</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>642.35</td>\n",
+       "      <td>1587.99</td>\n",
+       "      <td>1404.20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.42</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8133.23</td>\n",
+       "      <td>8.4178</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>390</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.95</td>\n",
+       "      <td>23.3442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>189</td>\n",
+       "      <td>0.0007</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>642.35</td>\n",
+       "      <td>1582.79</td>\n",
+       "      <td>1401.87</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.86</td>\n",
+       "      <td>2388.08</td>\n",
+       "      <td>8133.83</td>\n",
+       "      <td>8.3682</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>392</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.88</td>\n",
+       "      <td>23.3739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>188</td>\n",
+       "      <td>-0.0019</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>642.37</td>\n",
+       "      <td>1582.85</td>\n",
+       "      <td>1406.22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>522.19</td>\n",
+       "      <td>2388.04</td>\n",
+       "      <td>8133.80</td>\n",
+       "      <td>8.4294</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>393</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>38.90</td>\n",
+       "      <td>23.4044</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   engine_id  cycle  RUL  setting1  setting2  setting3      s1      s2  \\\n",
+       "0          1      1  192   -0.0007   -0.0004     100.0  518.67  641.82   \n",
+       "1          1      2  191    0.0019   -0.0003     100.0  518.67  642.15   \n",
+       "2          1      3  190   -0.0043    0.0003     100.0  518.67  642.35   \n",
+       "3          1      4  189    0.0007    0.0000     100.0  518.67  642.35   \n",
+       "4          1      5  188   -0.0019   -0.0002     100.0  518.67  642.37   \n",
+       "\n",
+       "        s3       s4  ...     s12      s13      s14     s15   s16  s17   s18  \\\n",
+       "0  1589.70  1400.60  ...  521.66  2388.02  8138.62  8.4195  0.03  392  2388   \n",
+       "1  1591.82  1403.14  ...  522.28  2388.07  8131.49  8.4318  0.03  392  2388   \n",
+       "2  1587.99  1404.20  ...  522.42  2388.03  8133.23  8.4178  0.03  390  2388   \n",
+       "3  1582.79  1401.87  ...  522.86  2388.08  8133.83  8.3682  0.03  392  2388   \n",
+       "4  1582.85  1406.22  ...  522.19  2388.04  8133.80  8.4294  0.03  393  2388   \n",
+       "\n",
+       "     s19    s20      s21  \n",
+       "0  100.0  39.06  23.4190  \n",
+       "1  100.0  39.00  23.4236  \n",
+       "2  100.0  38.95  23.3442  \n",
+       "3  100.0  38.88  23.3739  \n",
+       "4  100.0  38.90  23.4044  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -73,8 +257,7 @@
     "\n",
     "data.head()\n",
     "dcolumns = data.columns\n",
-    "\n",
-    "json.dumps({\"columns\": dcolumns})"
+    "dcolumns.to_json ('Table.json', orient='records')"
    ]
   },
   {
@@ -1004,14 +1187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSchedule = pd.read_csv('Data/DataSchedule.txt', sep=\" \", header=None)\n",
+    "dataSchedule = pd.read_csv('DataSchedule.txt', sep=\" \", header=None)\n",
     "dataSchedule.columns = ['engine_id', 'cycle', 'setting1', 'setting2', 'setting3', 's1', 's2', 's3', 's4', 's5', 's6', 's7', 's8', 's9', 's10', 's11', 's12', 's13', 's14', 's15', 's16', 's17', 's18', 's19', 's20', 's21', 'NA', 'NA']\n",
     "del dataSchedule['NA']\n",
     "\n",
+    "\n",
+    "dataSchedule.to_json ('predict_data.json', orient='records')\n",
     "# dataSchedule.loc[dataSchedule['engine_id'] == 1]"
    ]
   },
