--- a/Assignment/Assignment-3_complete-1.ipynb
+++ b/Assignment/Assignment-3_complete-1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,9 +256,98 @@
     "data.insert(2, 'RUL', RUL_list)\n",
     "\n",
     "data.head()\n",
-    "dcolumns = data.columns\n",
-    "dcolumns.to_json ('Table.json', orient='records')"
+    "dataset = data\n",
+    "dataset.head()\n",
+    "# dcolumns = data.columns\n",
+    "# dcolumns.to_json ('Table.json', orient='records')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['setting1',\n",
+       " 'setting2',\n",
+       " 'setting3',\n",
+       " 's1',\n",
+       " 's2',\n",
+       " 's3',\n",
+       " 's4',\n",
+       " 's5',\n",
+       " 's6',\n",
+       " 's7',\n",
+       " 's8',\n",
+       " 's9',\n",
+       " 's10',\n",
+       " 's11',\n",
+       " 's12',\n",
+       " 's13',\n",
+       " 's14',\n",
+       " 's15',\n",
+       " 's16',\n",
+       " 's17',\n",
+       " 's18',\n",
+       " 's19',\n",
+       " 's20',\n",
+       " 's21']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = dataset.columns\n",
+    "columns = columns[3:].to_list()\n",
+    "columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-7.00000e-04, -4.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
+       "         3.90600e+01,  2.34190e+01],\n",
+       "       [ 1.90000e-03, -3.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
+       "         3.90000e+01,  2.34236e+01],\n",
+       "       [-4.30000e-03,  3.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
+       "         3.89500e+01,  2.33442e+01],\n",
+       "       ...,\n",
+       "       [ 4.00000e-04,  0.00000e+00,  1.00000e+02, ...,  1.00000e+02,\n",
+       "         3.84400e+01,  2.29333e+01],\n",
+       "       [-1.10000e-03,  3.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
+       "         3.82900e+01,  2.30640e+01],\n",
+       "       [-3.20000e-03, -5.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
+       "         3.83700e+01,  2.30522e+01]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# X = dataset.loc[[columns]]\n",
+    "# Y = dataset.loc[['RUL']]\n",
+    "\n",
+    "dataset[dataset.columns[3:]].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2508,7 +2597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
