--- a/Assignment/Assignment-3_complete-1.ipynb
+++ b/Assignment/Assignment-3_complete-1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        " 's21']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,45 +309,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X = dataset.loc[[columns]]\n",
+    "# Y = dataset.loc[['RUL']]\n",
+    "\n",
+    "X = dataset[dataset.columns[3:]]\n",
+    "Y = dataset[dataset.columns[2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-7.00000e-04, -4.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
-       "         3.90600e+01,  2.34190e+01],\n",
-       "       [ 1.90000e-03, -3.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
-       "         3.90000e+01,  2.34236e+01],\n",
-       "       [-4.30000e-03,  3.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
-       "         3.89500e+01,  2.33442e+01],\n",
-       "       ...,\n",
-       "       [ 4.00000e-04,  0.00000e+00,  1.00000e+02, ...,  1.00000e+02,\n",
-       "         3.84400e+01,  2.29333e+01],\n",
-       "       [-1.10000e-03,  3.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
-       "         3.82900e+01,  2.30640e+01],\n",
-       "       [-3.20000e-03, -5.00000e-04,  1.00000e+02, ...,  1.00000e+02,\n",
-       "         3.83700e+01,  2.30522e+01]])"
+       "GradientBoostingRegressor(learning_rate=0.25, max_depth=5, n_estimators=400)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# X = dataset.loc[[columns]]\n",
-    "# Y = dataset.loc[['RUL']]\n",
+    "from sklearn import ensemble\n",
     "\n",
-    "dataset[dataset.columns[3:]].values"
+    "params = {'n_estimators': 400, 'max_depth': 5, 'learning_rate': 0.25}\n",
+    "    \n",
+    "model = ensemble.GradientBoostingRegressor(**params)\n",
+    "model.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model, open('model.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2 = pickle.load(open('model.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method RegressorMixin.score of GradientBoostingRegressor(learning_rate=0.25, max_depth=5, n_estimators=400)>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.score"
+   ]
   },
   {
    "cell_type": "markdown",
