--- a/Assignment/Assignment-3_complete-1.ipynb
+++ b/Assignment/Assignment-3_complete-1.ipynb
@@ -258,8 +258,270 @@
     "data.head()\n",
     "dataset = data\n",
     "dataset.head()\n",
-    "# dcolumns = data.columns\n",
     "# dcolumns.to_json ('Table.json', orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = pd.read_json('predict_data_short.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>engine_id</th>\n",
+       "      <th>cycle</th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s10</th>\n",
+       "      <th>s11</th>\n",
+       "      <th>s12</th>\n",
+       "      <th>s13</th>\n",
+       "      <th>s14</th>\n",
+       "      <th>s15</th>\n",
+       "      <th>s16</th>\n",
+       "      <th>...</th>\n",
+       "      <th>delta_s8</th>\n",
+       "      <th>max_s9</th>\n",
+       "      <th>min_s9</th>\n",
+       "      <th>delta_s9</th>\n",
+       "      <th>max_setting1</th>\n",
+       "      <th>min_setting1</th>\n",
+       "      <th>delta_setting1</th>\n",
+       "      <th>max_setting2</th>\n",
+       "      <th>min_setting2</th>\n",
+       "      <th>delta_setting2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>47.20</td>\n",
+       "      <td>521.72</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8125.55</td>\n",
+       "      <td>8.4052</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>9050.17</td>\n",
+       "      <td>9050.17</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>47.50</td>\n",
+       "      <td>522.16</td>\n",
+       "      <td>2388.06</td>\n",
+       "      <td>8139.62</td>\n",
+       "      <td>8.3803</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>9054.42</td>\n",
+       "      <td>9050.17</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>-0.0027</td>\n",
+       "      <td>-0.0050</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>-0.0006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>47.50</td>\n",
+       "      <td>521.97</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8130.10</td>\n",
+       "      <td>8.4441</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>9056.96</td>\n",
+       "      <td>9050.17</td>\n",
+       "      <td>2.54</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>-0.0027</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>0.0004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>47.28</td>\n",
+       "      <td>521.38</td>\n",
+       "      <td>2388.05</td>\n",
+       "      <td>8132.90</td>\n",
+       "      <td>8.3917</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>9056.96</td>\n",
+       "      <td>9045.29</td>\n",
+       "      <td>-11.67</td>\n",
+       "      <td>0.0042</td>\n",
+       "      <td>-0.0027</td>\n",
+       "      <td>0.0039</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>-0.0001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>518.67</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>47.31</td>\n",
+       "      <td>522.15</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8129.54</td>\n",
+       "      <td>8.4031</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>9056.96</td>\n",
+       "      <td>9044.55</td>\n",
+       "      <td>-0.74</td>\n",
+       "      <td>0.0042</td>\n",
+       "      <td>-0.0027</td>\n",
+       "      <td>-0.0028</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 96 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   engine_id  cycle      s1  s10    s11     s12      s13      s14     s15  \\\n",
+       "0          1      1  518.67  1.3  47.20  521.72  2388.03  8125.55  8.4052   \n",
+       "1          2      1  518.67  1.3  47.50  522.16  2388.06  8139.62  8.3803   \n",
+       "2          3      1  518.67  1.3  47.50  521.97  2388.03  8130.10  8.4441   \n",
+       "3          4      1  518.67  1.3  47.28  521.38  2388.05  8132.90  8.3917   \n",
+       "4          5      1  518.67  1.3  47.31  522.15  2388.03  8129.54  8.4031   \n",
+       "\n",
+       "    s16  ...  delta_s8   max_s9   min_s9  delta_s9  max_setting1  \\\n",
+       "0  0.03  ...      0.00  9050.17  9050.17      0.00        0.0023   \n",
+       "1  0.03  ...     -0.03  9054.42  9050.17      4.25        0.0023   \n",
+       "2  0.03  ...      0.04  9056.96  9050.17      2.54        0.0023   \n",
+       "3  0.03  ...     -0.02  9056.96  9045.29    -11.67        0.0042   \n",
+       "4  0.03  ...     -0.02  9056.96  9044.55     -0.74        0.0042   \n",
+       "\n",
+       "   min_setting1  delta_setting1  max_setting2  min_setting2  delta_setting2  \n",
+       "0        0.0023          0.0000        0.0003        0.0003          0.0000  \n",
+       "1       -0.0027         -0.0050        0.0003       -0.0003         -0.0006  \n",
+       "2       -0.0027          0.0030        0.0003       -0.0003          0.0004  \n",
+       "3       -0.0027          0.0039        0.0003       -0.0003         -0.0001  \n",
+       "4       -0.0027         -0.0028        0.0003       -0.0003          0.0000  \n",
+       "\n",
+       "[5 rows x 96 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "feature_engineer(predict).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feature_engineer(dataset):\n",
+    "    X = dataset[dataset.columns[2:]]\n",
+    "    engine = dataset.iloc[:,0].to_list()\n",
+    "    cycle = dataset.iloc[:,1].to_list()\n",
+    "\n",
+    "    # Clustering the data\n",
+    "    X_cluster = X[['setting1', 'setting2', 'setting3']]\n",
+    "\n",
+    "    # creates the clusters\n",
+    "    kmeans = KMeans(n_clusters=3).fit(X_cluster)\n",
+    "    X['settings_clusters'] = kmeans.predict(X_cluster)\n",
+    "\n",
+    "    features = dataset.columns[2:-1]\n",
+    "    for feature in features:\n",
+    "        # Creating min, max and delta variables\n",
+    "        X['max_' + feature] = dataset.groupby('engine_id')[feature].cummax()\n",
+    "        X['min_' + feature] = dataset.groupby('engine_id')[feature].cummin()\n",
+    "\n",
+    "        X['delta_' + feature] = dataset.groupby('engine_id')[feature].diff()\n",
+    "        X['delta_' + feature].fillna(0, inplace=True)\n",
+    "\n",
+    "    X.insert(0, 'engine_id', engine)\n",
+    "    X.insert(1, 'cycle', cycle)\n",
+    "    return X"
    ]
   },
   {
@@ -711,6 +973,29 @@
    ],
    "source": [
     "print(*data.columns, sep=', ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('Data_predict_short.txt', sep=\" \", header=None)\n",
+    "data.columns = ['engine_id', 'cycle', 'setting1', 'setting2', 'setting3', 's1', 's2', 's3', 's4', 's5', 's6', 's7', 's8', 's9', 's10', 's11', 's12', 's13', 's14', 's15', 's16', 's17', 's18', 's19', 's20', 's21', 'NA', 'NA']\n",
+    "del data['NA']\n",
+    "\n",
+    "# Creating and adding the RUL to the dataframe\n",
+    "RUL_list = []\n",
+    "for engine in set(data['engine_id']):\n",
+    "    max_cycle = data.loc[data['engine_id'] == engine].cycle.max()\n",
+    "    \n",
+    "    for cycle in list(data.loc[data['engine_id'] == engine].cycle):\n",
+    "        RUL_list.append(max_cycle - cycle +1)    \n",
+    "        \n",
+    "# data['RUL'] = RUL_list\n",
+    "\n",
+    "data.insert(2, 'RUL', RUL_list)"
    ]
   },
   {
